(Add Tools: HawkEye) HawkEye

--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -2,6 +2,7 @@ themes = {
     post-hole: #B31917,
     post-warning: #EB7728,
     post-low: #7D669E,
+    post-tools: #7AAB13,
     post-jekyll: #B31917,
     post-css: #2DA0C3,
     post-js: #D6BA32,
