(Update Config: Footer) 添加百度统计代码

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,12 @@
     <p><a href="https://github.com/medicean/vulapps" target="_blank">Fork me on GitHub</a></p>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ca27e3cd9ff32a48518fedf4d652ae8b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
